[tool.poetry]
name = "msg_handler"
version = "0.1.0"
description = ""
authors = ["kmiya <miyak19@mytru.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^27.1.0"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
