[tool.poetry]
name = "msg_handler"
version = "0.3.3"
description = "Sensor and Heartbeat message handling with MessageQueue system and Pydantic"
authors = ["kmiya <miyak19@mytru.ca>"]
readme = "README.md"
include = ["src/msg_handler/py.typed"]

# This is for globally
[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^27.1.0"
pydantic = "^2.12.5"

# This is for development & testing
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
mypy = "^1.8.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]